[package]
name = "oaicompat-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-openai = { default-features = false, git = "https://github.com/xutianyi1999/async-openai.git" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokenizers = { version = "0.21", features = ["http", "rustls-tls"] }
futures-util = { version = "0.3", default-features = false }
csv = "1"
glob = "0.3"